# github-copilot-upgrading

.github/workflows/: main.yml
workshop/upgraded/: pyproject.toml  setup.py
workshop/upgraded/.github/workflows/: actions.yaml
workshop/upgraded/guachi.egg-info/: PKG-INFO
workshop/upgraded/guachi/tests/: test_configurations.py
